--- a/.github/workflows/do_hw.yml
+++ b/.github/workflows/do_hw.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/checkout@master
 
     - name: Update SHA
-      run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/site/_meta
+      run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/_meta
 
     - name: Build container image
       run: docker build -t ${DO_REGISTRY}/${DO_IMAGE}:$(echo $GITHUB_SHA | head -c7) .
