--- a/nginx-example/nginx.conf
+++ b/nginx-example/nginx.conf
@@ -1,13 +1,16 @@
-events {}
+server {
+    listen       8000;
+    server_name  localhost;
 
-http {
-    js_import http.js;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
 
-    server {
-        listen 8000;
-
-        location / {
-            js_content http.hello;
-        }
+    # redirect server error pages to the static page /50x.html
+    #
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
 }
