--- a/.github/workflows/do_hw.yml
+++ b/.github/workflows/do_hw.yml
@@ -56,6 +56,7 @@ jobs:
 
     - name: Update deployment file and Deploy
       run: |- 
+        TAG=$(echo $GITHUB_SHA | head -c7)
         cd $GITHUB_WORKSPACE/config
         $GITHUB_WORKSPACE/kustomize edit set image '<IMAGE>'=${DO_REGISTRY}'/'${DO_IMAGE}':'${TAG}
         $GITHUB_WORKSPACE/kustomize build . | kubectl apply -f -
